--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,16 +14,16 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Upload files to EC2
-        uses: appleboy/scp-action@v0.1.10
+        uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ec2-user
           key: ${{ secrets.EC2_KEY }}
           source: "./*"
-          target: "/tmp/"
+          target: "/tmp/edumanage-frontend"
 
       - name: Deploy to Apache Web Root
-        uses: appleboy/ssh-action@v0.1.10
+        uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ec2-user
@@ -31,5 +31,5 @@ jobs:
           script: |
             sudo rm -rf /var/www/html/*
             sudo cp -r /tmp/edumanage-frontend/* /var/www/html/
-            sudo chown -R apache:apache /var/www/html/
+            sudo chown -R apache:apache /var/www/html
             sudo systemctl restart httpd
